comp-transform/testsuite/good/PieceConst/PieceConst.hs
{-# LANGUAGE ComposableTypes #-}

piececategory Expr

data piece Expr ==> Value = Const Int
