comp-transform/testsuite/bad/PieceNoCategory/PieceNoCategory.hs
{-# LANGUAGE ComposableTypes #-}

module Main where

data piece Expr ==> Value = Const Int
